# commwell

./: .env-example  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: settings.py  urls.py
backend/communication/: admin.py  filters.py  models.py  serializers.py  views.py
backend/communication/management/commands/: populate_badges.py
backend/communication/migrations/: 0001_initial.py  0002_badges.py  0003_rename_badges_badge.py  0004_alter_badge_owners.py  0005_rename_badget_picture_badge_badge_picture_and_more.py  0006_rename_badge_name_badge_name_and_more.py
backend/core/: serializers.py  views.py
backend/core/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  FeedbackPage.js  HomePage.js  KudosPage.js  LoginPage.js  ProfilePage.js  Sidebar.js  SidebarLayout.js
